--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "local-storage": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "react-top-loading-bar": "^2.3.1",
     "sass": "^1.66.1",
     "styled-components": "^6.0.8",
     "swiper": "^10.3.1",
+    "top-loading-bar": "^7.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
