--- a/api/src/.env
+++ b/api/src/.env
@@ -1,8 +1,5 @@
-PORT= 5001
-
-
-
-HOST=localhost
-USER=root
-PWD=1234
-DB=conexaoDB
+MYSQL_PORT=3042
+MYSQL_HOST=129.148.42.252
+MYSQL_USER=admin
+MYSQL_PWD=@dm!n
+MYSQL_DB=conexaoDB
